@@ -148,7 +148,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.900 $"))
+    (let ((rev "$Revision: 1.901 $"))
       (and (string-match "\\.\\([0-9]+\\) \$$" rev)
 	   (format "1.3.%d"
 		   (- (string-to-number (match-string 1 rev)) 642)))))
@@ -2612,13 +2612,13 @@ should use `w3m-url-encode-string' instead of this."
 		 (device-on-window-system-p)
 	       window-system))
     (goto-char (point-min))
-    (while (search-forward "[DEL:" nil t)
+    (while (re-search-forward "\\[\\(DEL\\|S\\):" nil t)
       (let ((start (match-beginning 0)))
 	(delete-region start (match-end 0))
-	(when (search-forward ":DEL]" nil t)
+	(when (re-search-forward ":\\(DEL\\|S\\)]" nil t)
 	  (delete-region (match-beginning 0) (match-end 0))
 	  (w3m-add-text-properties start (match-beginning 0)
-				   '(face w3m-strike-through-face)))))))
+			       '(face w3m-strike-through-face)))))))
 
 (defsubst w3m-decode-anchor-string (str)
   ;; FIXME: This is a quite ad-hoc function to process encoded URL
@@ -3087,8 +3087,8 @@ If optional RESERVE-PROP is non-nil, text property is reserved."
 	   (search-forward "</title>" nil t)
 	   (delete-region start (match-end 0))))
     (w3m-fontify-bold)
-    (w3m-fontify-underline)
     (w3m-fontify-strike-through)
+    (w3m-fontify-underline)
     (w3m-fontify-anchors)
     (when w3m-use-form
       (w3m-fontify-forms))
